syntax = "proto3";
option optimize_for = LITE_RUNTIME;
package base;

enum ServerType{
    NONE = 0;
    CLIENT = 1;
    GATE = 2;
    GAME = 3;

}


message BaseMsg
{
    int32 verison = 1;
    int64 id = 2;
    string msg = 3;
}
